examples/good/loops.ps
int x = 0;
while true {
    x = 0;
    break;
}

int i = 0;
while i < 13 {
    println(i);
    i = i + 1;
}
# i == 13

i = 0;
int j = 0;
string s = "hello potato";
while true {
    if i >= 13 {
        break;
    }
    
    i = i + 1;
    if i % 2 == 1 {
        continue;
    }
    println(i);
    println(s);
    j = j + 1;
}
