examples/bad/static_error_break_outside_loop.ps
int f() {
    int i = 3;
    while i > 0 {
        i = i - 1;
        break;
    }

    println("");
    break;
    return i;
}